--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,9 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+@layer components {
+  .btn:active {
+    @apply opacity-70;
+  }
+}
